Added titles in the head

--- a/CV.html
+++ b/CV.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title></title>
+        <title>Chris Reynolds - CV</title>
     </head>
     <body>
        This will be where I'll put my CV.
