--- a/default.html
+++ b/default.html
@@ -9,22 +9,21 @@
 
     </head>
     <body>
-    
-        <header class="header">
-          <nav class="nav">
- 
-            <ul>
-              <li><a href="/default.html">Chris Reynolds</a></li>
-              <li><a href="/about">About</a></li>
-              <li><a href=/projects">Projects</a></li>
-              <li><a href="/contact">Contact</a></li>
-            </ul>
-             
-          </nav>
-        </header>
-      </div>
+      <nav class="nav">
+        <ul>
+          <li><a href="/default.html">Chris Reynolds</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/projects">Projects</a></li>
+          <li><a href="/contact">Contact</a></li>
+        </ul>        
+      </nav>
 
-      </header>
+      <h3>About</h3>
+      <p>a bit of fucking junk about myself</p>
+      <h3>Projects</h3>
+      <p>just a bit of this and that I'm up to</p>
+      <h3>holler</h3>
+      <p>or not whatever</p>
       <div id="rupert">
       <img src="assets/images/rupert3.png" alt="daft looking dog peering round the corner">
       </div>
