widths in css float in nav

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <body>
       <nav class="nav">
         <ul>
-          <li><a href="/index.html">Chris Reynolds</a></li>
-          <!-- <li><a href="/about">About</a></li>
+          <li class="logo"><a href="/index.html">Chris Reynolds</a></li>
+          <li><a href="/about">About</a></li>
           <li><a href="/projects">Projects</a></li>
-          <li><a href="/contact">Contact</a></li> -->
+          <li><a href="/contact">Contact</a></li>
         </ul>        
       </nav>
       
-      <div class="text">
+      <div id="text">
       <h3>About</h3>
       <p>A project manager with experience on all sizes of digital projects across the public and private sectors.</p>
       <p>A few highlights include delivering large-scale service improvements for vulnerable users of social services, roll out of a location and route finding app for a major department store and improvement and delivery of a web app for public facing staff to manage appointments and queries at point of contact for service users.</p>
@@ -28,6 +28,7 @@
       <h3>Contact</h3>
       <p>Or not whatever. <a href="mailto:cpreynolds@outlook.com?Subject=Waddup">Email.</a> <a href="https://twitter.com/kingofdukest" target="_blank">Twitter.</a></p>
       </div>
+      
       <div id="rupert">
       <img src="assets/images/rupert3.png" alt="daft looking dog peering round the corner">
       </div>
