getting MVP onto my server

--- a/index.html
+++ b/index.html
@@ -12,21 +12,18 @@
       <nav class="nav">
         <ul>
           <li class="logo"><a href="/index.html">Chris Reynolds</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/projects">Projects</a></li>
-          <li><a href="/contact">Contact</a></li>
-        </ul>        
+        </ul>
       </nav>
       
       <div id="text">
       <h3>About</h3>
-      <p>A project manager with experience on all sizes of digital projects across the public and private sectors.</p>
-      <p>A few highlights include delivering large-scale service improvements for vulnerable users of social services, roll out of a location and route finding app for a major department store and improvement and delivery of a web app for public facing staff to manage appointments and queries at point of contact for service users.</p>
+      <p>A project manager with experience leading all sizes of digital projects across the public and private sectors.</p>
+      <p>A few highlights include delivering large-scale service improvements for vulnerable social services users, roll out of a location and route finding app for a major department store, and delivery of speed and effeciency improvements to a web app for handling appointments and queries for City Council service users.</p>
       <h3>Projects</h3>
       <p>I've got a couple of exciting new things going on at the moment.
       <p>More details to follow.</p>
       <h3>Contact</h3>
-      <p>Or not whatever. <a href="mailto:cpreynolds@outlook.com?Subject=Waddup">Email.</a> <a href="https://twitter.com/kingofdukest" target="_blank">Twitter.</a></p>
+      <p>If you want to drop me an <a href="mailto:cpreynolds@outlook.com?Subject=Waddup">email</a> or <a href="https://twitter.com/cprenno" target="_blank">tweet</a> go right ahead.</p>
       </div>
       
       <div id="rupert">
