--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 		<link rel="stylesheet" href="assets/css/main.css">
 		
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		
 		<script>
