added cv download

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<nav class="nav">
 			<ul>
 				<li class="logo"><a href="/index.html">Chris Reynolds</a></li>
-				<li class="cv"><a href="/assets/files/Chris%20Reynolds%20CV%20Jan%202017.pdf">CV &darr; </a></li>
+				<li class="cv"><a href="/assets/files/Chris%20Reynolds%20CV%20Jan%202017.pdf" download>CV 	&#8681; </a></li>
 			</ul>
 		</nav>
 
