changed email subject to something more professional...

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<p>I've got a couple of exciting new things going on at the moment.
 		<p>More details to follow.</p>
 		<h3>Contact</h3>
-		<p>If you want to drop me an <a href="mailto:cpreynolds@outlook.com?Subject=Waddup">email</a> or <a href="https://twitter.com/cprenno" target="_blank">tweet</a> go right ahead.</p>
+		<p>If you want to drop me an <a href="mailto:cpreynolds@outlook.com?Subject=Website Contact">email</a> or <a href="https://twitter.com/cprenno" target="_blank">tweet</a> go right ahead.</p>
 		</div>
 
 		<div class="rupert">
